<resources>
    <!-- App constants -->
    <string name="app_name">homeLab</string>

    <!-- Views -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_status">Status</string>

    <!-- Constants -->
    <string name="text_null">--</string>
    <string name="last_update">last update : </string>
    <string name="button_refresh">Refresh</string>
    <string name="button_refresh_text">Refreshing</string>

    <!-- Dashboard view constants -->
    <string name="dashboard_title">Temperature</string>
    <string name="dashboard_temp_in_title">In.</string>
    <string name="dashboard_temp_out_title">Out.</string>
    <string name="dashboard_temp_unit">°C</string>

    <!-- Status view constants -->
    <string name="app_version_key">App version</string>
    <string name="status_settings">Settings</string>
    <string name="settings_dark_mode">Dark mode</string>
    <string name="settings_refresh">Refresh frequency</string>
    <string name="settings_refresh_value">%1d min</string>
    <string name="settings_battery">Ext. module battery</string>
    <string name="settings_battery_status">Status</string>
    <string name="battery_status">%1d %%</string>

    <!-- -->
    <string name="unicode_ellipsis">\u2026</string>
</resources>
