<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.carbostation.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/ui_fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.carbostation.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/ui_fragment_dashoard" />

    <fragment
        android:id="@+id/navigation_status"
        android:name="com.carbostation.ui.status.StatusFragment"
        android:label="@string/title_status"
        tools:layout="@layout/ui_fragment_status" />
</navigation>