<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/color_background_alt"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="143dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- App Version -->
        <TextView
            android:id="@+id/status_version_key"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/comfortaa_light"
            android:text="@string/app_version_key"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/status_version"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/status_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_rectangle"
            android:fontFamily="monospace"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp"
            android:text="@string/text_null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status_version_key" />

        <!-- Switch test -->
        <TextView
            android:id="@+id/switch_test_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/comfortaa_light"
            android:text="@string/status_settings"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/settings_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status_version" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_test_key">

            <TextView
                android:id="@+id/switch_test_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                android:text="@string/settings_dark_mode"
                app:layout_constraintBottom_toTopOf="@+id/settings_timing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/switch_dark_mode_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/homeLabTheme.SwitchButton"
                app:layout_constraintBottom_toBottomOf="@+id/switch_test_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.98"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/switch_test_desc"
                tools:checked="false" />

            <TextView
                android:id="@+id/settings_timing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                android:text="@string/settings_refresh"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch_test_desc" />

            <SeekBar
                android:id="@+id/settings_timing_bar"
                style="@android:style/Widget.Material.SeekBar.Discrete"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:max="2"
                android:min="0"
                android:progress="0"
                android:progressTint="?attr/color_green"
                android:thumbTint="?attr/color_green"
                android:tickMarkTint="@color/color_dark_grey"
                app:layout_constraintBottom_toBottomOf="@+id/settings_timing"
                app:layout_constraintEnd_toEndOf="@+id/settings_timing"
                app:layout_constraintHorizontal_bias="0.98"
                app:layout_constraintStart_toStartOf="@+id/settings_timing"
                app:layout_constraintTop_toTopOf="@+id/settings_timing" />

            <TextView
                android:id="@+id/settings_timing_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/text_null"
                app:layout_constraintBottom_toBottomOf="@+id/settings_timing"
                app:layout_constraintEnd_toStartOf="@+id/settings_timing_bar"
                app:layout_constraintTop_toTopOf="@+id/settings_timing" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Switch test -->
        <TextView
            android:id="@+id/module_out_battery_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/comfortaa_light"
            android:text="@string/settings_battery"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/module_out_battery_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_container" />

        <TextView
            android:id="@+id/module_out_battery_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_rectangle"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp"
            android:text="@string/settings_battery_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/module_out_battery_key" />

        <ImageView
            android:id="@+id/status_battery_value_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:rotation="-90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/module_out_battery_desc"
            app:srcCompat="@drawable/ic_battery_null" />

        <TextView
            android:id="@+id/status_battery_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/text_null"
            app:layout_constraintBottom_toBottomOf="@+id/module_out_battery_desc"
            app:layout_constraintEnd_toStartOf="@+id/status_battery_value_icon"
            app:layout_constraintTop_toTopOf="@+id/module_out_battery_desc" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
